# Whaling

./: .gitignore  AGENTS.md  README.md  manifest.jsonl  pyproject.toml  pytest.ini  requirements.txt  results.md  revision_2026_config.yaml  run_pipeline.py  run_revision_2026_phase2_tests.py  run_revision_2026_tests.py  run_stopping_rule_robustness.py  setup.sh
analysis/: run_wsl_reliability_ml.py
docs/: README_compass.md  data_dictionary.md  destination_ontology.md  ipums_extract_instructions.md  ml_results_summary.md  next_round_interpretation.md  next_round_results_summary.md  qa_report.md
notebooks/: 11_paper_appendix.ipynb
scripts/: audit_regime_labels.py  extraction_orchestrator.py  generate_paper_tables.py  hpcc_extract.sb  hpcc_extract_v2.sb  hpcc_extract_v3.sb  hpcc_extract_v4.sb  hpcc_price_backfill.sb  llm_review_extraction_pipeline.md  monitor_job.sh  qwen3_vl_nothink.jinja  test_3b_comparison.py  test_chunk_sizes.py  test_comparison_c_vs_e.py  test_optimized_pipeline.py  test_option_c_vlm.py  test_option_e_ocr_llm.py  test_rich_prompt.py  test_vision_ocr.py  test_vision_ocr_large.py  wsl_merge.py  wsl_postprocess.py  wsl_preprocess.py
src/: __init__.py  _public_api.py  akm_analysis.py  config.py  main.py  torch_device.py
tests/: compare_connectivity_sets.py  test_capital_intensity.py  test_compass.py  test_download_resilience.py  test_features_public_api.py  test_ingest_wsl_prices.py  test_ipums_loader.py  test_logbook_analyses.py  test_loo_connected_set_kss.py  test_main.py  test_manifest.py  test_mechanism_crew.py  test_ml_acceleration.py  test_ml_prediction_tuning.py  test_ml_shift.py  test_ocr_layout.py  test_paper_appendix_figures.py  test_paper_build_outputs.py  test_paper_data.py  test_paper_output_utils.py  test_pipeline_api_compat.py  test_pipeline_step_runner.py  test_price_validators.py  test_risk_matching.py  test_robustness_three.py  test_setup_script.py  test_state_endogeneity.py  test_torch_acceleration.py  test_utils_regression.py  test_variance_decomposition.py  test_voyage_augmentor.py  test_wsl_event_extractor.py  test_wsl_pdf_parser.py  test_wsl_price_panel.py  (+4 more)
(+456 files in other folders)
