[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whaling-pipeline"
version = "0.626"
description = "Venture Capital of the Sea: Whaling Data Pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyarrow>=14.0.0",
    "requests>=2.28.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "pyproj>=3.4.0",
    "hmmlearn>=0.3.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
linkage = [
    "recordlinkage>=0.15"
]
torch = [
    "torch>=2.0.0"
]
all = [
    "pytest>=7.0.0",
    "recordlinkage>=0.15",
    "torch>=2.0.0"
]

[project.scripts]
whaling = "src.pipeline.runner:main"

[tool.setuptools.packages.find]
include = ["src*"]
